# krkn-docs-bot-gh-aw

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: doc-sync.md
bot/: descriptions.py  doc_bot.py  drift_scanner.py  emitter.py  github_client.py  llm_client.py  parser.py  scaffold.py
docs/: JOURNAL.md  PIPELINE_OVERVIEW.md
tests/: conftest.py  test_description_resolution.py  test_doc_bot.py  test_drift_scanner.py  test_emitter.py  test_github_client.py  test_llm_client.py  test_parser.py  test_scaffold.py
tests/fixtures/: rollback_krknctl-input.json
